implemented jwt authentication